codex-src/codex-rs/tui/src/snapshots/codex_tui__app__tests__clear_ui_header_fast_status_fast_capable_models.snap
---
source: tui/src/app/tests.rs
expression: rendered
---
╭─────────────────────────────────────────────╮
│ >_ retrace-tui (v<VERSION>)                 │
│                                             │
│ model:     gpt-5.4 xhigh   /model to change │
│ directory: /tmp/project                     │
╰─────────────────────────────────────────────╯
